<resources>
    <string name="app_name">Pico Botella</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contador">3</string>
    <string name="presioname">PRESIÓNAME</string>
    <string name="maintittle">Pico botella</string>
    <string name="challenge">Retos</string>
    <string name="agregar_reto">Agregar Reto</string>
    <string name="escriba_el_reto">Escriba el reto</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="editar_reto">Editar Reto</string>
    <string name="rules_titlle">Reglas del Juego</string>
    <string name="tittle_howplay">¿Como se juega?</string>
    <string name="howplay_text">Los jugadores forman un círculo y en el centro colocan el dispositivo móvil, luego tocan el botón parpadeante para girar la botella. El jugador que señale la botella debe cumplir el reto que lanza la app, de lo contrario abandona el juego</string>
    <string name="whowin_tittle">¿Quién gana?</string>
    <string name="whowin_text">Gana el último jugador que no abandone el juego</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>
</resources>