<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/white">

        <!-- Título del diálogo -->
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/agregar_reto"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/et_challenge_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/escriba_el_reto"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/orange_mid"
            app:layout_constraintBottom_toTopOf="@+id/button_container" />

        <!-- Contenedor para los botones -->
        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/et_challenge_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar"
                android:textColor="@color/black"
                android:backgroundTint="@color/orange_mid" />

            <View android:layout_width="16dp" android:layout_height="@+id/btn_cancel" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guardar"
                android:textColor="@color/black"
                android:backgroundTint="@color/orange_mid"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
