<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".view.fragment.InstructionsFragment">

        <include
            android:id="@id/callToolBar"
            layout="@layout/toolbar_fragments"/>

        <TextView
            android:id="@+id/tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginVertical="25dp"
            android:text="@string/tittle_howplay"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/callToolBar" />

        <TextView
            android:id="@+id/contend_howplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/howplay_text"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tittle"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/sub_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginVertical="15dp"
            android:text="@string/whowin_tittle"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/contend_howplay"
            app:layout_constraintStart_toStartOf="parent"
             />

        <TextView
            android:id="@+id/contend_whowins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/whowin_text"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/sub_tittle"
            app:layout_constraintStart_toStartOf="parent"
             />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/win_animation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sub_tittle"
            app:lottie_rawRes="@raw/win"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>