<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.LoginFragment"
        android:background="@color/black">

        <TextView
            android:id="@+id/tvTitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintittle"
            android:textStyle="bold"
            android:layout_marginVertical="490dp"
            android:textSize="45sp"
            android:textColor="@color/login_orange"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tilEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextAppearance="@color/white"
            app:boxBackgroundColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:counterTextColor="@color/white"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitleLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:boxBackgroundColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:backgroundTint="@color/login_orange"
            app:layout_constraintTop_toBottomOf="@id/tilPass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/registrarse"
            android:textColor="@color/color_btnRegistrarse"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/waves_background"
            android:layout_gravity="bottom"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>